--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "eleventy-plugin-postcss",
   "version": "0.0.1",
   "description": "Eleventy plugin for PostCSS",
-  "main": "src/index.js",
+  "main": ".eleventy.js",
+  "engines": {
+    "node": ">=7.6.0"
+  },
+  "11ty": {
+    "compatibility": ">=1.0.0"
+  },
   "scripts": {
+    "demo": "npx @11ty/eleventy --input=demo --output=demo/_site --config=demo/.eleventy.js",
+    "start": "npx @11ty/eleventy --input=demo --output=demo/_site --config=demo/.eleventy.js --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +32,12 @@
   },
   "homepage": "https://github.com/pewstiepoll/eleventy-plugin-postcss#readme",
   "dependencies": {
-    "postcss": "8.4.8"
+    "postcss": "8.4.8",
+    "postcss-load-config": "3.1.3"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^1.0.0",
+    "postcss-mixins": "9.0.2",
+    "postcss-preset-env": "7.4.2"
   }
 }
