ava: installed test framework

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "scripts": {
     "demo": "npx @11ty/eleventy --input=demo --output=demo/_site --config=demo/.eleventy.js",
+    "demo:cleanup": "rm -rf ./demo/_site",
     "start": "npx @11ty/eleventy --input=demo --output=demo/_site --config=demo/.eleventy.js --serve",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava",
+    "pretest": "npm run demo",
+    "posttest": "npm run demo:cleanup"
   },
   "repository": {
     "type": "git",
@@ -38,9 +41,10 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
-    "eslint": "^8.11.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
+    "ava": "4.1.0",
+    "eslint": "8.11.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.25.4",
     "postcss-mixins": "9.0.2",
     "postcss-preset-env": "7.4.2"
   }
