--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "import/no-unresolved": "off"
     },
     "ignorePatterns": "!././eleventy.js"
 }
